--- a/style.css
+++ b/style.css
@@ -37,16 +37,18 @@ body {
         display: flex;
     }
 }
-@media (min-width: 399px) and (max-height: 400px){
+@media (min-width: 399px), (max-height: 400px){
     h1 {
                 display: flex;
                 justify-content: center;
             }
-        }
+}
 #two h1 {
     text-transform: capitalize;
     color: green;
 }
-@media (min-width: 750px max-width: 775px; min-height 550; max-height 575px;) {
-    font-style: italic;
+@media (min-width: 750px;) and (max-width: 775px;) and (min-height 550;) and  (max-height 575px;) {
+    body {
+      font-style: italic;
+    }
 }
