--- a/style.css
+++ b/style.css
@@ -19,8 +19,10 @@ body {
       background-color: orange;
     }
   }
-#one h1 {
+  @media (min-width: 600px) and (max-height: 400px) {
+    #one h1 {
     border: 10px solid grey
+  }
 }
 @media (min-width: 600px) and (max-height: 400px){
     #one h1 {
