--- a/style.css
+++ b/style.css
@@ -24,34 +24,50 @@ body {
     border: 10px solid grey
   }
 }
-@media (min-width: 600px) and (max-height: 400px){
-    #one h1 {
-    border: 10px dotted grey
-    }
+@media (max-width: 600px) and (max-height: 400px) {
+  #one {
+    border: 10px dashed gray;
+  }
+  #three {
+    border: 10px dotted gray;
+  }
 }
-@media (min-width: 900px) and (max-height: 500px){
+@media (min-width: 900px), (max-height: 500px){
     #two h1 {
     border-top: 10px solid grey;
     }
 }
-@media (min-width: 499px) and (max-height: 400px){
-    h1 {
-        display: flex;
-    }
+@media (orientation: landscape) {
+  body {
+    display: flex;
+  }
 }
-@media (min-width: 399px) and (max-height: 400px){
-    h1 {
-        display: flex;
-        justify-content: center;
-            }
+@media (orientation: portrait) {
+  body {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
 }
-@media (color:white = false){
-  #two h1 {
-    text-transform: capitalize;
+@media print {
+  h1 {
+    text-transform: uppercase;
     color: green;
   }
 }
-@media (min-width: 750px;) and (max-width: 775px;) and (min-height 550;) and (max-height 575px;) { body {
-      font-style: italic;
-    }
+@media (max-width: 800px) {
+  #two {
+    color: navy;
   }
+}
+@media (max-width: 600px) {
+  #two {
+    color: orange;
+  }
+}
+@media (min-width: 750px) and (max-width: 775px) and (min-height: 550px) and (max-height: 575px) {
+  * {
+    font-style: italic;
+  }
+}
